--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
             <div class="row folio-entries">
                 <div class="column entry">
-                    <a href="images/folio/gallery/Dessin_1.jpg" class="entry__link glightbox" data-glightbox="title: Caffeine & Tulips; description: .entry__desc-03">
+                    <a href="images/folio/gallery/Dessin_1.jpg" class="entry__link glightbox" data-glightbox="description: .entry__desc-03">
                         <div class="entry__thumb">
                             <img src="images/folio/gallery/Dessin_1.jpg" alt="">
                         </div>
@@ -201,13 +201,15 @@
                         <p>
                             Dessin fait au crayon graphites. <br>
                             Format :  50x70cm. <br>
-                            Support :  Papier Bristol 220g/m².
+                            Support :  Papier Bristol 220g/m². <br>
+                            Prix avec cadre : 75€ <br>
+                            Prix sans cadre : 70€
                         </p>
                     </div>
                 </div> <!-- entry -->
 
                 <div class="column entry">
-                    <a href="images/folio/gallery/DEssin_3.jpg" class="entry__link glightbox" data-glightbox="title: White Knit Cap; description: .entry__desc-01">
+                    <a href="images/folio/gallery/DEssin_3.jpg" class="entry__link glightbox" data-glightbox="description: .entry__desc-01">
                         <div class="entry__thumb">
                             <img src="images/folio/gallery/DEssin_3.jpg" alt="">
                         </div>
@@ -221,12 +223,14 @@
                         <p>
                         Dessin fait au crayon graphites et crayons de couleurs Fabercastels <br>
                         Format :  50x70cm
-                        Support :  Papier Bristol 220g/m².
+                        Support :  Papier Bristol 220g/m². <br>
+                        Prix avec cadre : 75€ <br>
+                        Prix sans cadre : 70€
                         </p>
                     </div>
                 </div> <!-- entry -->
                 <div class="column entry">
-                    <a href="images/folio/gallery/Dessin_5.jpg" class="entry__link glightbox" data-glightbox="title: WoodCraft; description: .entry__desc-02">
+                    <a href="images/folio/gallery/Dessin_5.jpg" class="entry__link glightbox" data-glightbox="description: .entry__desc-02">
                         <div class="entry__thumb">
                             <img src="images/folio/gallery/Dessin_5.jpg", alt="">
                         </div>
@@ -240,13 +244,15 @@
                         <p>
                             Dessin fait au crayon graphites<br>
                             Format : A3  29,7x42cm <br>
-                            Support :  Papier Canson 250g/m².
+                            Support :  Papier Canson 250g/m². <br>
+                            Prix avec cadre : 65€ <br>
+                            Prix sans cadre : 60€
                         </p>
                     </div>
                 </div> <!-- entry -->
 
                 <div class="column entry">
-                    <a href="images/folio/gallery/Dessin_4.jpg" class="entry__link glightbox" data-glightbox="title: Caffeine & Tulips; description: .entry__desc-03">
+                    <a href="images/folio/gallery/Dessin_4.jpg" class="entry__link glightbox" data-glightbox="description: .entry__desc-03">
                         <div class="entry__thumb">
                             <img src="images/folio/gallery/Dessin_4.jpg" alt="">
                         </div>
@@ -260,13 +266,16 @@
                         <p>
                             Dessin fait au crayon graphites. <br>
                             Format :  50x70cm. <br>
-                            Support :  Papier Bristol 220g/m².
+                            Support :  Papier Bristol 220g/m². <br>
+                            Prix avec cadre : 75€ <br>
+                            Prix sans cadre : 70€
                         </p>
                     </div>
                 </div> <!-- entry -->
+                <h3 class="text-display-title"><u>Manga</u></h3>
         
                 <div class="column entry">
-                    <a href="images/folio/gallery/Dessin_7.jpg" class="entry__link glightbox" data-glightbox="title: Grayscale; description: .entry__desc-04">
+                    <a href="images/folio/gallery/Dessin_7.jpg" class="entry__link glightbox" data-glightbox="description: .entry__desc-04">
                         <div class="entry__thumb">
                             <img src="images/folio/gallery/Dessin_7.jpg" alt="">
                         </div>
@@ -280,12 +289,13 @@
                         <p>
                         Dessin fait au crayons graphite et aux aux crayons de couleurs Fabercastels <br>
                         Format : A4 21x29,7cm <br>
-                        Support :  Papier Craft 200g/m²
+                        Support :  Papier Craft 200g/m² <br>
+                        Prix : 50€
                         </p>
                     </div>
                 </div> <!-- entry -->
                 <div class="column entry">
-                    <a href="images/folio/gallery/Dessin_8.jpg" class="entry__link glightbox" data-glightbox="title: The Lamp; description: .entry__desc-05">
+                    <a href="images/folio/gallery/Dessin_8.jpg" class="entry__link glightbox" data-glightbox="description: .entry__desc-05">
                         <div class="entry__thumb">
                             <img src="images/folio/gallery/Dessin_8.jpg" alt="">
                         </div>
