--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                     </a>
                     <div class="glightbox-desc entry__desc-05">
                         <p>
-                            Dessin fait au crayons graphite et aux aux crayons de couleurs Fabercastels <br>
+                            Dessin fait au crayons graphite et aux crayons de couleurs Fabercastels <br>
                             Format : A4 21x29,7. <br>
                             Support :  Papier Canson 120g/m²
                         </p>
