--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
                             Dessin fait au crayons graphite et aux crayons de couleurs Fabercastels <br>
                             Format : A4 21x29,7. <br>
                             Support :  Papier Canson 120g/m²
+                            Prix : 50€
                         </p>
                     </div>
                 </div> <!-- entry -->
