--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                         <p>
                             Dessin fait au crayons graphite et aux aux crayons de couleurs Fabercastels <br>
                             Format : A4 21x29,7. <br>
-                            Support :  Papier Canson 120g/m²
+                            Support :  Papier Canson 120g/m² <br>
                             Prix : 50€
                         </p>
                     </div>
