--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                                     </cite>
                                 </div>
                                 <p>
-                                Samuel est un jeune dessinateur talentueux très sympatique et très talentueux.
+                                Samuel est un jeune dessinateur très sympatique et très talentueux.
                                 Ses oeuvres parlent d'êlles-mêmes. Faîtes minitieusement, elles ne peuvent attirer qu'admiration et satisfaction.
                                 N'hésitez pas à passer vos commandes. Vous ne serez point déçus! C'est sûr !😉
                                 </p>
