--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                                 </div>
                                 <p>
                                 Samuel est un jeune dessinateur très sympatique et très talentueux.
-                                Ses oeuvres parlent d'êlles-mêmes. Faîtes minitieusement, elles ne peuvent attirer qu'admiration et satisfaction.
+                                Ses oeuvres parlent d'elles-mêmes. Faîtes minitieusement, elles ne peuvent attirer qu'admiration et satisfaction.
                                 N'hésitez pas à passer vos commandes. Vous ne serez point déçus! C'est sûr !😉
                                 </p>
                             </div> <!-- end s-testimonials__slide -->            
@@ -363,7 +363,7 @@
                                 </div>
                                 <p>
                                 Les dessins de Samuel sont très jolis et biens faits, il est très investi dans ce qu'il fait.
-                                Chacun de ses oeuvres transmettent l'innovation,le temps et l'amour de ce qu'il fait.
+                                Chacune de ses oeuvres transmettent l'innovation,le temps et l'amour de ce qu'il fait.
                                 </p>
                             </div> <!-- end s-testimonials__slide -->
                             <div class="s-testimonials__slide swiper-slide">
