--- a/index.html
+++ b/index.html
@@ -336,6 +336,8 @@
                                     </cite>
                                 </div>
                                 <p>
+                                    Samuel est une personne admirable avec un talent remarquable. Rigueur, minutie, précision, sens du détail … Ses œuvres en sont de parfaites illustrations. 
+                                    Je recommande à 100% ses services si vous souhaitez un travail de qualité élaboré avec passion et beaucoup d’amour.
                                 
                                 </p>
                             </div> 
