--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                                 </div>
                                 <p>
                                 Samuel est un jeune dessinateur talentueux très sympatique et très talentueux.
-                                Ses oeuvres parlent d'êlles-mêmes. Faîtes minitieusement, elles ne peuvent attirer qu'admiration et satisfaction.
+                                Ses oeuvres parlent d'êlles-mêmes. Faites minitieusement, elles ne peuvent attirer qu'admiration et satisfaction.
                                 N'hésitez pas à passer vos commandes. Vous ne serez point déçus! C'est sûr !😉
                                 </p>
                             </div> <!-- end s-testimonials__slide -->            
@@ -375,9 +375,7 @@
                                     </cite>
                                 </div>
                                 <p>
-                                Excepturi nam cupiditate culpa doloremque deleniti repellat. Veniam quos repellat voluptas animi adipisci.
-                                Nisi eaque consequatur. Voluptatem dignissimos ut ducimus accusantium perspiciatis.
-                                Quasi voluptas eius distinctio. Atque eos maxime.
+                                    t
                                 </p>
                             </div>
         
@@ -408,7 +406,7 @@
                 <div class="column xl-6 md-12 s-footer__block s-footer__about">                    
                     <p class="attention-getter">
                         Ça se passe ici !
-                    Faîtes-vous plaisir et faîtes plaisir à vos proches !😉
+                    Faites-vous plaisir et faites plaisir à vos proches !😉
                     </p>               
                 </div> <!-- end section-footer__about -->
 
