--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                             </div> <!-- end s-testimonials__slide -->
                             <div class="s-testimonials__slide swiper-slide">
                                 <div class="s-testimonials__author">
-                                    <img src="images/avatars/Fatima.jpg" alt="Author image" class="s-testimonials__avatar">
+                                    <img src="images/avatars/Fatima_2.jpg" alt="Author image" class="s-testimonials__avatar">
                                     <cite class="s-testimonials__cite">
                                         <strong>Fatima MEYIE FAKIH</strong>                                        
                                     </cite>
