--- a/index.html
+++ b/index.html
@@ -375,7 +375,12 @@
                                     </cite>
                                 </div>
                                 <p>
-                                    t
+                                    J'ai eu la chance d'être dessiné par Samuel et je dois dire que son talent est tout simplement incroyable. 
+                                    Le portrait qu'il a fait de moi est non seulement magnifique mais aussi d'une ressemblance frappante. 
+                                    De plus, pour mon anniversaire, il a dessiné Gojo Satoru, et le résultat est juste époustouflant. 
+                                    Samuel a un don exceptionnel pour capturer les détails et l'essence de ses sujets, que ce soit dans un style réaliste ou manga. 
+                                    Je recommande vivement ses services à tous ceux qui cherchent des œuvres d'art uniques et de grande qualité. 
+                                    Merci encore Samuel pour ton merveilleux travail !❤️
                                 </p>
                             </div>
         
