--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                             <ul class="link-list">
                                 <li><a href="https://www.tiktok.com/@sam_asy?_t=8kXHcvRYDkk&_r=1">Tiktok</a></li>
                                 <li><a href="https://www.instagram.com/a_s_y03?igsh=c2Qya2ZqcnZtbzFt">Instagram</a></li>
-                                <li><a href="https://www.linkedin.com/in/samuel-aheto-1a63522b1/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Linkeldin</a></li>
+                                <li><a href="https://www.linkedin.com/in/samuel-aheto-1a63522b1/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Linkedin</a></li>
                             </ul>
                         </div>
                         <div class="column xl-6 md-6 tab-12">
