--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
                         <h1 class="s-intro__content-title">
                         Je suis Samuel<br>
                         un passionné d'art,<br>
-                        prêt à votre service
+                        prêt à vous rendre service
                         </h1>                            
 
                         <div class="s-intro__content-btns">
                             <a class="smoothscroll btn" href="#about">Qui suis-je ?</a>
-                            <a class="smoothscroll btn btn--stroke" href="#footer">Get In Touch</a>
+                            <a class="smoothscroll btn btn--stroke" href="#footer">Contact</a>
                         </div> <!-- s-intro__content-btns -->   
 
                     </div> <!-- s-intro__content-text -->                     
@@ -401,7 +401,7 @@
             <div class="row">
                 <div class="column lg-12">
                     <div class="section-header light-on-dark" data-num="03">
-                        <h2 class="text-display-title">Get In Touch.</h2>
+                        <h2 class="text-display-title">Contact.</h2>
                     </div> <!-- end section-header -->
                 </div>
             </div>
