--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                             <h5>Suivez moi</h5>
                             <ul class="link-list">
                                 <li><a href="https://www.tiktok.com/@sam_asy?_t=8kXHcvRYDkk&_r=1">Tiktok</a></li>
-                                <li><a href="https://www.instagram.com/a_s_y03?igsh=c2Qya2ZqcnZtbzFt">Instagram</a></li>
+                                <li><a href="https://www.instagram.com/sam.draw03?igsh=MWR5ajFuMjlkcGk4aQ==">Instagram</a></li>
                                 <li><a href="https://www.linkedin.com/in/samuel-aheto-1a63522b1/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Linkedin</a></li>
                             </ul>
                         </div>
