--- a/index.html
+++ b/index.html
@@ -328,11 +328,9 @@
                             Format : A3 29,7x42cm . <br>
                             Support :  Papier Bristol 250g/m²
                         </p>
-                    </div><!-- entry -->
-
-                
-
-            </div> <!-- folio entries -->
+                    
+                    </div>
+                </div> <!-- folio entries -->
 
 
             <div class="row s-testimonials">
