--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js" >
+<html lang="fr" class="no-js" >
 <head>
 
     <!--- basic page needs
@@ -229,6 +229,7 @@
                         </p>
                     </div>
                 </div> <!-- entry -->
+                
                 <div class="column entry">
                     <a href="images/folio/gallery/Dessin_5.jpg" class="entry__link glightbox" data-glightbox="description: .entry__desc-02">
                         <div class="entry__thumb">
@@ -239,7 +240,6 @@
                             <div class="entry__cat">Dessin au graphite</div>
                         </div>
                     </a>
-
                     <div class="glightbox-desc entry__desc-02">
                         <p>
                             Dessin fait au crayon graphites<br>
@@ -284,7 +284,6 @@
                             <div class="entry__cat">Dessin de Rengoku de Demon Slayer</div>
                         </div>
                     </a>
-
                     <div class="glightbox-desc entry__desc-04">
                         <p>
                         Dessin fait au crayons graphite et aux aux crayons de couleurs Fabercastels <br>
